--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,16 @@
 buildscript {
     ext {
-        compose_version = '1.3.1'
+        compose_ui_version = '1.3.3'
+        compose_runtime_version = '1.3.3'
+        compose_compiler_version = '1.3.2'
+        compose_material_version = '1.3.1'
         lifecycle_version = "2.5.1"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
 }
 
 task clean(type: Delete) {
